do not pluralize entity names for uniformity across the application